tests/errors/test_01.x
// Return type of main is not void 

fn main() -> i64 {}